--- a/index.html
+++ b/index.html
@@ -1701,7 +1701,7 @@ My experience at Shyamoli Ideal Polytechnic Institute has been exceptional. The 
   <div class="notice-list">
     <a class="notice" href="notices-nobin-boron-2024.html" data-date="06 Feb 24">
       <h3 class="notice-title">Nobin Boron 2024</h3>
-      <img src="img/notices/1.jpeg" alt="Image 1">
+      <img src="img/notices/nobin/1.jpeg" alt="Image 1">
       <p class="notice-description">The Nobin Boron 2024 Ceremony for Diploma in Engineering program was organized.....</p>
     </a>
     <a class="notice" href="notice2.html" data-date="15 AUG 23">
@@ -1908,25 +1908,25 @@ My experience at Shyamoli Ideal Polytechnic Institute has been exceptional. The 
                 <h1 class="display-4">Events </h1>
             </div>
   <div class="notice-list">
-    <a class="notice" href="notice1.html" data-date="14 AUG 23">
-      <h3 class="notice-title">Notice Title 1</h3>
-      <img class="notice-image" src="image1.jpg" alt="Notice Image 1">
-      <p class="notice-description">Short description of Notice 1.</p>
+     <a class="notice" href="notices-nobin-boron-2024.html" data-date="06 Feb 24">
+      <h3 class="notice-title">Nobin Boron 2024</h3>
+      <img src="img/notices/nobin/1.jpeg" alt="Image 1">
+      <p class="notice-description">The Nobin Boron 2024 Ceremony for Diploma in Engineering program was organized.....</p>
     </a>
-    <a class="notice" href="notice2.html" data-date="15 AUG 23">
-      <h3 class="notice-title">Notice Title 2</h3>
-      <img class="notice-image" src="image2.jpg" alt="Notice Image 2">
-      <p class="notice-description">Short description of Notice 2.</p>
+    <a class="notice" href="farewell19-20.html" data-date="13th Feb 24">
+      <h3 class="notice-title">Farewell Ceremony 2019–20</h3>
+      <img src="img/notices/farewell/4.jpeg" alt="Image 1"alt="Notice Image 2">
+      <p class="notice-description">The farewell ceremony for the 2019–20 session of Shyamoli Ideal Polytechnic Institute ...</p>
     </a>
-    <a class="notice" href="notice3.html" data-date="16 AUG 23">
-      <h3 class="notice-title">Notice Title 3</h3>
-      <img class="notice-image" src="image3.jpg" alt="Notice Image 3">
-      <p class="notice-description">Short description of Notice 3.</p>
+    <a class="notice" href="annual-picnic-2024..html" data-date="16 Feb 24">
+      <h3 class="notice-title">Annual Picnic - 2024</h3>
+      <img src="img/notices/picnic/1.jpg" alt="Image 1" alt="Notice Image 3">
+      <p class="notice-description">The grand annual picnic for the esteemed Department of Electrical Technology at Shyamoli Ideal Polytechnic Institute</p>
     </a>
-    <a class="notice" href="notice4.html" data-date="17 AUG 23">
-      <h3 class="notice-title">Notice Title 4</h3>
-      <img class="notice-image" src="image4.jpg" alt="Notice Image 4">
-      <p class="notice-description">Short description of Notice 4.</p>
+    <a class="notice" href="industry-visit-2024.html" data-date="23 Feb 24">
+      <h3 class="notice-title">Industrial Visit 2024</h3>
+      <img src="img/notices/industry-visit/3.jpg"alt="Notice Image 4">
+      <p class="notice-description">The Department of Electrical Technologyat Shyamoli Ideal Polytechnic Institute orchestrated ......</p>
     </a>
 	
 	
