--- a/industry-visit-2024.html
+++ b/industry-visit-2024.html
@@ -370,27 +370,27 @@ body {
 <!-- Photo Grid -->
 <div class="row"> 
   <div class="column">
-    <img src="img/notices/nobin/1.jpeg" alt="Image 1" style="width:100%">
-    <img src="img/notices/nobin/2.jpeg" alt="Image 1" style="width:100%">
-    <img src="img/notices/nobin/6.jpeg" alt="Image 1"style="width:100%">
+     <img src="img/notices/industry-visit/1.jpg" alt="Image 1" style="width:100%">
+    <img src="img/notices/industry-visit/2.jpg" alt="Image 1" style="width:100%">
+    <img src="img/notices/industry-visit/3.jpg" alt="Image 1"style="width:100%">
    
   </div>
   <div class="column">
-    <img src="img/notices/nobin/7.jpeg" alt="Image 1" style="width:100%">
-    <img src="img/notices/nobin/8.jpeg" alt="Image 1"  style="width:100%">
-    <img src="img/notices/nobin/9.jpeg" alt="Image 1" style="width:100%">
+    <img src="img/notices/industry-visit/4.jpg" alt="Image 1" style="width:100%">
+    <img src="img/notices/industry-visit/5.jpg" alt="Image 1"  style="width:100%">
+    <img src="img/notices/industry-visit/6.jpg" alt="Image 1" style="width:100%">
    
   </div>  
   <div class="column">
-    <img src="img/notices/nobin/10.jpeg" alt="Image 1"  style="width:100%">
-    <img src="img/notices/nobin/11.jpeg" alt="Image 1"  style="width:100%">
-    <img src="img/notices/nobin/13.jpeg" style="width:100%">
+    <img src="img/notices/industry-visit/7.jpg" alt="Image 1"  style="width:100%">
+    <img src="img/notices/industry-visit/8.jpg" alt="Image 1"  style="width:100%">
+    <img src="img/notices/industry-visit/9.jpg"style="width:100%">
 
   </div>
   <div class="column">
-   <img src="img/notices/nobin/14.jpeg" alt="Image 1"  style="width:100%">
-    <img src="img/notices/nobin/15.jpeg" alt="Image 1"  style="width:100%">
-    <img src="img/notices/nobin/13.jpeg" style="width:100%">
+   <img src="img/notices/industry-visit/10.jpg" alt="Image 1"  style="width:100%">
+    <img src="img/notices/industry-visit/11.jpg" alt="Image 1"  style="width:100%">
+    <img src="img/notices/industry-visit/12.jpg"style="width:100%">
   </div>
 </div>
 
