--- a/index.html
+++ b/index.html
@@ -1918,7 +1918,7 @@ My experience at Shyamoli Ideal Polytechnic Institute has been exceptional. The 
       <img src="img/notices/farewell/4.jpeg" alt="Image 1"alt="Notice Image 2">
       <p class="notice-description">The farewell ceremony for the 2019–20 session of Shyamoli Ideal Polytechnic Institute ...</p>
     </a>
-    <a class="notice" href="annual-picnic-2024..html" data-date="16 Feb 24">
+    <a class="notice" href="annual-picnic-2024.html" data-date="16 Feb 24">
       <h3 class="notice-title">Annual Picnic - 2024</h3>
       <img src="img/notices/picnic/1.jpg" alt="Image 1" alt="Notice Image 3">
       <p class="notice-description">The grand annual picnic for the esteemed Department of Electrical Technology at Shyamoli Ideal Polytechnic Institute</p>
